<resources>
    <string name="app_name">PojavLauncher (Minecraft: Java Edition for Android)</string>
    <string name="app_short_name">PojavLauncher</string>
    <string name="app_motd">Launch Minecraft: Java Edition in your device!</string>
    <string name="actionbar_help">HELP</string>
    <string name="language_name">ENGLISH - US</string>
    <string name="login_online_username_hint">Email or username</string>
    <string name="login_online_username_question">(Which do I use?)</string>
    <string name="login_online_password_hint">Password</string>
    <string name="login_online_password_question">Forgot password?</string>
    <string name="login_online_remember">Remember me?</string>
    <string name="login_online_check_keeplogin">Keep me logged in</string>
    <string name="login_online_login_label">Login</string>
    <string name="login_online_create_account">(Create new account?)</string>
    <string name="login_offline_switch">Offline account?</string>
    <string name="login_offline_label">Login as offline account</string>
    <string name="login_offline_alert_skip">Skip</string>
    <string name="login_error_short_username">Username must be at least 3 characters</string>
    <string name="login_error_exist_username">This username already exist</string>
    <string name="login_select_account">Select account</string>
    <string name="hint_select_account">To select, click it. To delete an account, hold it.</string>
    <string name="hint_control_mapping">"Swipe from right to left to open menu ◀\nHold a button to customize: edit, resize or delete."</string>
    <string name="warning_title">Warning</string>
    <string name="warning_msg">This app may not compatible with your Android version (above or equals than Android 7.0). You can use VMOS then install this app to VMOS instead. But VMOS is removed by Play Store, you must install it manually.</string>
    <string name="warning_noshowagain">Don\'t show again</string>
    <string name="warning_action_install">Install VMOS</string>
    <string name="warning_action_tryanyway">Try anyway</string>
    <string name="warning_action_exit">Exit</string>
    <string name="warning_remove_account">This account will be removed!</string>
    <string name="alerttitle_install_jre">Install Java Runtime %s (.tar.xz)</string>
    <string name="alerttitle_selectkeymap">Select a keymap json</string>
    <string name="alerttitle_installmod">Select a mod installer</string>
    <string name="error_fatal">PojavLauncher has unexpectedly crashed</string>
    <string name="error_checklog">Error! Please check the log below: %s</string>
    <string name="error_no_version">No version!</string>
    <string name="error_load_version">Unable to load version %s</string>
    <string name="error_show_more">Show more</string>
    <string name="error_show_less">Show less</string>
    <string name="toast_permission_denied">The read/write to storage permission is required!</string>
    <string name="toast_login_error">Something went wrong after login. Please feedback to the developer.\nError: %s</string>
    <string name="toast_optifine_success">Install successful</string>
    <string name="toast_uninstalljre_done">Done uninstall Java Runtime</string>
    <string name="mcl_tab_news">News</string>
    <string name="mcl_tab_mcje">Minecraft: Java Edition</string>
    <string name="mcl_tab_console">Development console</string>
    <string name="mcl_tab_crash">Crash log</string>
    <string name="mcl_version_msg">Ready to play Minecraft %s</string>
    <string name="mcl_launch_cleancache">Cleaning cache files</string>
    <string name="mcl_launch_downloading">Downloading %s</string>
    <string name="mcl_launch_download_lib">Downloading library %s</string>
    <string name="mcl_launch_download_client">Downloading Minecraft %s</string>
    <string name="mcl_launch_convert_lib">Converting library %s</string>
    <string name="mcl_launch_convert_client">Converting Minecraft %s</string>
    <string name="mcl_launch_patch_client">Patching Minecraft %s</string>
    <string name="mcl_launch_download_assets">Preparing to download resources</string>
    <string name="mcl_options">Options</string>
    <string name="mcl_option_modmgr">Mod manager (no function)</string>
    <string name="mcl_option_modinstall">Launch a mod installer (Forge, LabyMod, Fabric, etc...)</string>
    <string name="mcl_option_modinstallwitharg">Launch a mod installer (with custom arguments)</string>
    <string name="mcl_option_checkupdate">Check for update</string>
    <string name="mcl_option_customcontrol">Custom controls</string>
    <string name="mcl_option_settings">Settings</string>
    <string name="mcl_option_about">About</string>
    <string name="mcl_setting_title_uninstalljre">Uninstall Java Runtime</string>
    <string name="mcl_setting_subtitle_uninstalljre">[Launcher restart required] This let you re-install Java Runtime</string>
    <string name="mcl_setting_title_freeform">Launch Minecraft in Freeform mode</string>
    <string name="mcl_setting_subtitle_freeform">Launch Minecraft in floating window. Requires Android 7.0+</string>
    <string name="mcl_setting_title_longpresstrigger">How long will trigger after long press</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Change trigger time for long press in destroy block and drop item.</string>
    <string name="mcl_setting_title_buttonscale">Control buttons scaling</string>
    <string name="mcl_setting_subtitle_buttonscale">Upscale them if buttons are too small.</string>
    <string name="mcl_setting_title_mousescale">Mouse scaling</string>
    <string name="mcl_setting_subtitle_mousescale">Change size of virtual mouse.</string>
    <string name="mcl_setting_title_controlsize">Set control buttons size</string>
    <string name="mcl_setting_title_javaargs">JVM Launch arguments</string>
    <string name="mcl_setting_subtitle_javaargs">Be careful, this may make game crash if modified without knowledge.</string>
    <string name="mcl_setting_category_general">General settings</string>
    <string name="mcl_setting_category_scaling">Scaling settings</string>
    <string name="mcl_setting_category_veroption">Version type will be in version list</string>
    <string name="mcl_setting_veroption_release">Release</string>
    <string name="mcl_setting_veroption_snapshot">Snapshot</string>
    <string name="mcl_setting_veroption_oldalpha">Old-alpha</string>
    <string name="mcl_setting_veroption_oldbeta">Old-beta</string>
    <string name="mcl_version_clone">Clone</string>
    <string name="global_add">Add</string>
    <string name="global_edit">Edit</string>
    <string name="global_error">Error</string>
    <string name="global_load">Load</string>
    <string name="global_name">Name</string>
    <string name="global_remove">Remove</string>
    <string name="global_restart">Restart</string>
    <string name="global_save">Save</string>
    <string name="global_unpacking">Unpacking %s</string>
    <string name="global_error_field_empty">This field can\'t be empty</string>
    <string name="mcn_exit_title">Application/Game exited with code %d</string>
    <string name="mcn_exit_call">Exit</string>
    <string name="mcn_exit_crash">Game Crash detected! Click OK to exit.</string>
    <string name="mcn_exit_errcrash">Unable to locate crash! You may ignore this.</string>
    <string name="mcn_exit_confirm">Are you sure want to force close?</string>
    <string name="mcn_check_fail_lwjgl">LWJGL3 was not installed!</string>
    <string name="mcn_check_fail_incompatiblearch">Architecture %1$s is incompatible with Java Runtime %2$s.</string>
    <string name="mcn_check_fail_java">Could not start test Java VM. Check %s for more info.</string>
    <string name="controls">Controls</string>
    <string name="control_toggle">GUI</string>
    <string name="control_keyboard">Keyboard</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Debug</string>
    <string name="control_zoom">Zoom (C)</string>
    <string name="control_primary">Pri</string>
    <string name="control_secondary">Sec</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">3rd</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: off</string>
    <string name="control_mouseon">Mouse: on </string>
    <string name="control_forceclose">Force close</string>
    <string name="control_viewout">Log output</string>
    <string name="control_adebug">Input Debug</string>
    <string name="control_customkey">Send custom keycode</string>
    <string name="control_more3"></string>
    <string name="control_more4"></string>
    <string name="customctrl_keyname">Keycode</string>
    <string name="customctrl_specialkey">Special Key</string>
    <string name="customctrl_hidden">Hidden</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_dynamicpos">Dynamic position</string>
    <string name="customctrl_dynamicpos_x">Dynamic X</string>
    <string name="customctrl_dynamicpos_y">Dynamic Y</string>
    <string name="customctrl_transparency_bg">Background transparency</string>
    <string name="customctrl_transparency_text">Text transparency</string>
    <string name="customctrl_keycombine">Key combination</string>
    <string name="customctrl_keycombine_alt">Alt</string>
    <string name="customctrl_keycombine_control">Control</string>
    <string name="customctrl_keycombine_shift">Shift</string>
    <string name="customctrl_addbutton">Add button</string>
    <string name="customctrl_selectdefault">Select default Control json</string>
    <string name="main_options">Options</string>
    <string name="main_play">Play</string>
    <string name="main_welcome">Welcome,</string>
    <string name="main_infodev">Info (DEV)</string>
    <string name="main_switchuser">Switch user</string>
    <string name="main_version">Version:</string>
    <string name="main_nocrash">No crash detected</string>
    <string name="main_nolog">No log.</string>
</resources>