<?xml version="1.0" encoding="utf-8" ?>
<androidx.preference.PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.chom/apk/res-auto">
	
    <androidx.preference.PreferenceCategory
		android:title="@string/mcl_setting_category_general">
		
        <net.kdt.pojavlaunch.prefs.UninstallJREDialogPreference
            android:title="@string/mcl_setting_title_uninstalljre"
            android:summary="@string/mcl_setting_subtitle_uninstalljre" />
		
        <androidx.preference.SeekBarPreference
            android:key="timeLongPressTrigger"
            android:title="@string/mcl_setting_title_longpresstrigger"
            android:summary="@string/mcl_setting_subtitle_longpresstrigger" />
		
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="freeform"
			android:title="@string/mcl_setting_title_freeform"
			android:summary="@string/mcl_setting_subtitle_freeform"/>

        <EditTextPreference
			android:key="javaArgs"
			android:title="@string/mcl_setting_title_javaargs"
			android:summary="@string/mcl_setting_subtitle_javaargs"
			android:dialogTitle="@string/mcl_setting_title_javaargs"
            android:singleLine="true"/>
		
    </androidx.preference.PreferenceCategory>
	
    <androidx.preference.PreferenceCategory
        android:title="@string/mcl_setting_category_scaling">
        
        <androidx.preference.SeekBarPreference
            android:key="buttonscale"
            android:title="@string/mcl_setting_title_buttonscale"
            android:summary="@string/mcl_setting_subtitle_buttonscale" />
        
        <androidx.preference.SeekBarPreference
            android:key="mousescale"
            android:title="@string/mcl_setting_title_mousescale"
            android:summary="@string/mcl_setting_subtitle_mousescale" />
        
    </androidx.preference.PreferenceCategory>
	
    <androidx.preference.PreferenceCategory
		android:title="@string/mcl_setting_category_veroption">
		
        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="vertype_release"
			android:title="@string/mcl_setting_veroption_release" />
		
        <androidx.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="vertype_snapshot"
			android:title="@string/mcl_setting_veroption_snapshot" />
		
        <androidx.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="vertype_oldalpha"
			android:title="@string/mcl_setting_veroption_oldalpha" />
		
        <androidx.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="vertype_oldbeta"
			android:title="@string/mcl_setting_veroption_oldbeta" />
   
	</androidx.preference.PreferenceCategory>
	
</androidx.preference.PreferenceScreen>
