<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/customctrl_keyname"/>

	<Spinner
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:id="@+id/controlsetting_spinner_lwjglkeycode"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:id="@+id/controlsetting_normalbtnlayout">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/global_name"/>

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:singleLine="true"
			android:id="@+id/controlsetting_edit_name"/>

	</LinearLayout>

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/customctrl_hidden"
        android:id="@+id/controlsetting_checkbox_hidden"/>

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/customctrl_dynamicpos"
        android:id="@+id/controlsetting_checkbox_dynamicpos"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/controlsetting_dynamicbtnlayout">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/customctrl_dynamicpos_x"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:id="@+id/controlsetting_edit_dynamicpos_x"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/customctrl_dynamicpos_y"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:id="@+id/controlsetting_edit_dynamicpos_y"/>

    </LinearLayout>
    
</LinearLayout>

