<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    >

    <View
        android:id="@+id/login_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"

        android:background="@drawable/menu_background"
        android:translationZ="-1dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_online_username_hint"

        app:layout_constraintBottom_toTopOf="@+id/login_edit_email"
        app:layout_constraintStart_toStartOf="@+id/login_edit_email" />

    <com.kdt.mcgui.MineEditText
        android:id="@+id/login_edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:textSize="@dimen/_16ssp"

        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/login_menu"
        app:layout_constraintEnd_toEndOf="@+id/login_menu"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/login_menu"
        app:layout_constraintTop_toTopOf="@+id/login_menu"
        app:layout_constraintVertical_bias="0.088" />


    <com.kdt.mcgui.MineButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:onClick="loginMC"
        android:text="@string/login_online_login_label"

        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_password" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_online_password_hint"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="@+id/login_edit_email"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_email" />

    <com.kdt.mcgui.MineEditText
        android:id="@+id/login_edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16ssp"

        android:imeOptions="flagNoExtractUi"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_edit_email"
        app:layout_constraintStart_toStartOf="@+id/login_edit_email"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>